--- a/Website/Site/templates/home.html
+++ b/Website/Site/templates/home.html
@@ -4,27 +4,24 @@
 
 {% block content %}
   <div>
-    <h2>Home</h2><br />
-    <h3>Wer sind die Airsoft Scorpions Jena e.V.</h3>
-    <p>Die „Airsoft Scorpions Jena“ (kurz *ASJ*) sind ein „kleines“ Team, aus dem schönen Thüringen. Unser Verein hat sich 2019, aus einem kleinem Haufen Airsoft verrückter, gegründet.</p>
-    <p>Mittlerweile haben wir 50+ Mitglieder – diese kommen aus Jena, Weimar, Erfurt und Umgebung.</p><br />
+    <h3>Willkommen bei den Airsoft Scorpions Jena e.V.</h3>
+    <p>Wir sind ein aktives Airsoft-Team aus Thüringen – 2019 gegründet, seitdem stetig gewachsen. Inzwischen zählen wir über 50 Mitglieder aus Jena, Weimar, Erfurt und Umgebung. Ob Anfänger oder alter Airsoft-Hase – bei uns ist jeder willkommen, der Bock auf Taktik, Teamgeist und Adrenalin auf einem interessant gestalteten CQB-Feld hat.</p>
     <button onclick="loadImg('01')" type="button" class="btn p-0" data-bs-toggle="modal" data-bs-target="#img-modal"><img src="{% static 'img/01.jpg' %}" alt="Ladefehler" class="c-btn-img" /></button>
     <br /><br /><br />
-    <h3>Aktivitäten</h3>
-    <p>Wir sind ein sehr aktives Team...</p>
+    <h3>Was bei uns regelmäßig abgeht:</h3>
     <ul>
-      <li>am 1. Samstag im Monat ist „Teamtag“ < interner Tag für unsere Mitglieder</li>
-      <li>am 3. Samstag im Monat ist „Offener Spieltag“ < Anmeldungen über das ASVZ</li>
-      <li>zusätzliche Arbeitseinsätze auf unserem Gelände - je nach Bedarf</li>
-      <li>ab und zu trifft man uns auch als großes Team, auf Veranstaltungen anderer Airsoft-Gruppen</li>
+      <li>🦂 <strong>Erster Samstag im Monat:</strong> interner Teamtag – hier wird trainiert, getestet und natürlich auch gelacht.</li>
+      <li>🧑‍🤝‍🧑 <strong>Dritter Samstag im Monat:</strong> offener Spieltag für externe Spieler*innen – Anmeldung läuft über’s ASVZ.</li>
+      <li>🔨 <strong>Arbeitseinsätze:</strong> Wenn’s was zu tun gibt, packen wir gemeinsam an – Gelände pflegen, Deckungen bauen, Grill anwerfen...</li>
+      <li>🌍 <strong>Auswärtsspiele:</strong> Hin und wieder sind wir auch bei Events anderer Teams am Start – man muss ja mal rauskommen!</li>
     </ul>
-
     <button class="btn btn-secondary"><a href="/kalender" class="text-decoration-none light">Zum Teamkalender --></a></button><br /><br />
 
-    <h3>Ziele des Vereins</h3>
+    <h3>🎯 Was wir wollen (außer Spaß beim Spielen):</h3>
     <ul>
-      <li>jedem Interessierten die Möglichkeit zu geben, den Airsoftsport zusammen mit Gleichgesinnten auszuüben</li>
-      <li>über den Sport an sich und über den sicheren Umgang mit Airsoftwaffen zu informieren</li>
+      <li>Airsoft für alle, die Lust auf <strong>Teamplay</strong>, <strong>Taktik</strong> und <strong>Action</strong> haben</li>
+      <li>Verantwortungsvoller Umgang mit Airsoft-Markierern – <strong>sicher</strong>, <strong>fair</strong> und <strong>mit Köpfchen</strong></li>
+      <li>Neue Leute für den Sport begeistern – ganz <strong>ohne Rambogehabe</strong></li>
     </ul>
   </div>
 
