--- a/Website/Site/templates/interessiert.html
+++ b/Website/Site/templates/interessiert.html
@@ -3,16 +3,24 @@
 
 {% block content %}
   <div class="c-downloads">
-    <h2>Interessiert?</h2><br />
-    <h3>Wir haben euch neugierig gemacht ?</h3>
-    <p>KOMMT GERN VORBEI - zum zuschauen und/oder zum mitmachen. Für interessierte oder neue Spieler (ab 14 Jahren) haben wir Schutzausrüstung und Leihwaffen (unter und über 0,5 Joule) begrenzt verfügbar.</p>
-    <p>Diese bitte bei der Anmeldung zum Spieltag reservieren, eine kurze Nachricht, über einen unserer Kanäle genügt dafür.</p>
-    <h3>Downloads um Mitglied zu werden:</h3>
-    <p>Ihr wollt zum Team der Scorpions gehören ? Ihr seid Herzlich Willkommen... Druckt euch bitte unseren Mitgliedsantrag aus, füllt ihn vollständig aus, schickt ihn uns per Email oder bringt den Antrag zum nächsten Spieltag mit und gebt ihn persönlich ab.</p><br />
+    <h3>Wir haben dich neugierig gemacht?</h3>
+<p>Dann komm doch einfach mal vorbei!</p>
+<p>Ob nur zum Zuschauen oder direkt zum Mitmachen – wir freuen uns über neue Gesichter.</p>
+<p>Für interessierte oder neue Spieler*innen (ab 14 Jahren) haben wir eine begrenzte Anzahl an Schutzausrüstung und Leihwaffen (unter und über 0,5 Joule) vor Ort.</p>
+<p>Wenn du etwas davon brauchst, bitte <strong>bei der Anmeldung reservieren</strong> – eine kurze Nachricht über einen unserer Kanäle genügt.</p>
+<br>
+<h3>Du willst Teil des Teams werden?</h3>
+<p>Du willst zum Team der Scorpions gehören?<br>
+Mega – wir freuen uns auf dich!</p>
+<p>Lade dir einfach unseren Mitgliedsantrag herunter, fülle ihn vollständig aus und:</p>
+<ul>
+  <li>schick ihn uns per E-Mail</li>
+  <li>oder bring ihn zum nächsten Spieltag mit und gib ihn persönlich ab</li>
+</ul><br>
     <table class="table table-hover" style="border-color: var(--bs-secondary-color);">
       <tr>
         <td>
-          <h4>File</h4>
+          <h4>Datei</h4>
         </td>
         <td class="text-end">
           <h4>Download</h4>
