--- a/Website/Site/templates/layout.html
+++ b/Website/Site/templates/layout.html
@@ -21,13 +21,13 @@
   <header>
     <nav class="navbar c-nav-bar">
       <div class="container-fluid h-100 w-100">
-        <a class="navbar-brand" href="/home">
+        <a class="navbar-brand" href="/">
           <p class="welcome-message light">
             Herzlich willkommen <br />bei den
           </p>
         </a>
-        <a class="navbar-brand" href="/home"><p class="title-header light">Airsoft Scorpions Jena</p></a>
-        <a class="navbar-brand" href="/home"><img src="{% static 'img/logo-min.png' %}" alt class="logo-header" /></a>
+        <a class="navbar-brand" href="/"><p class="title-header light">Airsoft Scorpions Jena</p></a>
+        <a class="navbar-brand" href="/"><img src="{% static 'img/logo-min.png' %}" alt class="logo-header" /></a>
       </div>
     </nav>
 
