--- a/Website/Site/templates/wias.html
+++ b/Website/Site/templates/wias.html
@@ -2,58 +2,120 @@
 {% load static %}
 
 {% block content %}
-  <div>
-    <h2>Was ist Airsoft?</h2><br />
-    <h3>Airsoft</h3>
-    <p>Airsoft oder Softair ist ein taktischer Sport, der im Team ausgeübt wird. Ähnlich wie beim Paintball ist es, je nach Spielmodus, das Ziel einer Runde, gegnerische Spieler mittels eines Markierers „aus dem Spiel zu nehmen“.</p>
-    <p>Der Schwerpunkt des Sports liegt auf der Zusammenarbeit im Team, der Bewegung und dem Fairplay gegenüber den Gegenspielern.</p>
-    <p>Anders als beim Paintball werden kleine Kugeln (BBs = „Baby Bullets“) aus Kunststoff oder Maisstärke, sogenannte „Bio-BBs“, aus den Markierern verschossen.</p>
-    <p>
-      <u>Auf unserem Platz sind nur die Bio-BBs erlaubt!!!</u> Diese bestehen aus unter Druck gepreßter Maisstärke, die mit der Zeit biologisch abgebaut wird.
-    </p>
-    <p>Die Größe der verwendeten BBs richtet sich nach der Waffe und der Spielart des Spielers.</p>
-    <p>Für Nachtspiele gibt es spezielle BBs, sogenannte Tracer-BBs, die das Spiel bei Nacht erleichtern und für einen zusätzlichen Funfaktor sorgen.</p><br />
+<div>
+  <h3>Was ist Airsoft?</h3>
+  <p>Airsoft ist ein taktisches Geländespiel, bei dem Spieler*innen – meist in
+    Teams, aber nicht zwingend – mit Nachbildungen echter Waffen (sogenannten
+    Airsoftwaffen oder „Markierern“) gegeneinander antreten. Ziel ist es, je
+    nach Spielmodus bestimmte Aufgaben zu erfüllen – sei es das Eliminieren
+    aller Gegner, das Erobern einer Flagge oder das Verteidigen eines Bereichs.
+    Das Ganze passiert auf einem abgesperrten Spielfeld mit klaren Regeln.</p>
+  <p>Im Gegensatz zu Paintball nutzt Airsoft kleine 6-mm-Kugeln aus Kunststoff
+    oder Maisstärke, sogenannte „<strong>Bio-BBs</strong>“, die keine
+    Farbrückstände hinterlassen. Das Kugelgewicht der BBs richtet sich dabei
+    nach der jeweiligen Waffe und der bevorzugten Spielweise des Spielers. Für
+    Nachtspiele gibt es außerdem spezielle Tracer-BBs, die durch ihre Leuchtspur
+    für Orientierung sorgen – und nebenbei auch ziemlich cool aussehen.</p>
+  <p>Da Treffer nicht sichtbar sind, basiert das Spiel auf Fairness und
+    Ehrlichkeit. Wenn man getroffen wurde, meldet man sich freiwillig als „Hit“
+    – das ist Ehrensache!</p>
+  <p><strong>Wichtig:</strong><br>Auf unserem Spielfeld sind
+    <strong>ausschließlich biologisch abbaubare BBs (Bio-BBs) bis 0,36
+      g</strong> erlaubt. Wer mit normalen Kunststoffkugeln antritt, muss leider
+    wieder nach Hause fahren – der Umwelt zuliebe!</p><br>
 
-    <h3>Airsoft "Waffen"</h3>
-    <p>Die verwendeten Markierer sind beim Airsoft meistens realen Waffen nachempfunden und teilweise äußerlich nicht von solchen zu unterscheiden. Das deutsche Waffenrecht verbietet es deshalb, diese außerhalb privater, eingefriedeter Grundstücke bei sich zu tragen.</p>
-    <p>Ein Transport zwischen eigener Wohnung und einem Feld, auf dem das spielen erlaubt ist, hat deshalb in einem abgeschlossenen Behältnis zu erfolgen.</p>
-    <p>Die verwendeten „Waffen“ verschießen ihre Kügelchen mit einer Mündungsenergie zwischen 0,3 Joule und 3,0 Joule. Sie bleiben damit weit unter der Mündungsenergie eines Luftgewehrs. Trotzdem gelten für alle Airsoftwaffen mit einer Mündungsenergie von mehr als 0,5 Joule die gleichen gesetzlichen Bestimmungen, wie für ein Luftgewehr mit einer sehr viel höheren Mündungsenergie.</p>
-    <p>Um das Verletzungsrisiko während des Sports zu minimieren sind auf allen Feldern strenge Spielregeln in Kraft. Schutzausrüstung für Augen und Gesicht sind meistens Pflicht. Außerdem gelten meistens, je nach Mündungsenergie, Mindestabstände.</p>
-    <br/>
+  <h3>🔫 Airsoft-Waffen</h3>
+  <p>Die beim Airsoft eingesetzten Markierer sind meist echten Waffen
+    nachempfunden – oft so detailgetreu, dass sie von außen kaum zu
+    unterscheiden sind.<br>
+    Deshalb gilt: Außerhalb eines privaten, eingefriedeten Geländes (z. B. eines
+    Spielfeldes) dürfen sie nicht offen getragen werden.</p>
+  <p>Wenn du deinen Markierer zum Spielfeld bringst, musst du ihn in einem
+    abgeschlossenen Behältnis transportieren – zum Beispiel in einem
+    abschließbaren Koffer oder einer Tasche mit Schloss. So schreibt es das
+    deutsche Waffenrecht vor.</p>
+  <p>Die Markierer verschießen BBs mit einer Mündungsenergie zwischen ca. 0,3
+    und 3,0 Joule – das ist deutlich unter der Energie eines Luftgewehrs.<br>
+    <strong>Wichtig zu wissen:</strong> Für Markierer ab 0,5 Joule gelten
+    dieselben gesetzlichen Vorschriften wie für ein Luftgewehr – auch wenn ihre
+    Wirkung deutlich geringer ist.</p>
+  <p>Um Verletzungen beim Spiel zu vermeiden, gelten auf allen Spielfeldern
+    strenge Sicherheitsregeln.<br>
+    <strong>Schutzbrille ist Pflicht</strong>, Gesichtsschutz wird dringend
+    empfohlen.<br>
+    Außerdem gibt es je nach Mündungsenergie der Waffe Mindestabstände, die im
+    Spiel eingehalten werden müssen <br>Fair bleiben ist hier das A und O!</p>
 
-    <div class="row">
-      <div class="col-md-6" style="display: grid;">
-        <button onclick="loadImg('08')" type="button" class="btn p-0" data-bs-toggle="modal" data-bs-target="#img-modal" style="align-items: center;"><img src="{% static 'img/08.jpg' %}" alt="Ladefehler" class="" style="height: 500px;" /></button>
-      </div>
-      <div class="col-md-6" style="display: grid;">
-        <button onclick="loadImg('09')" type="button" class="btn p-0" data-bs-toggle="modal" data-bs-target="#img-modal" style="align-items: center;"><img src="{% static 'img/09.jpg' %}" alt="Ladefehler" class=" " style="height: 500px;" /></button>
+  <div class="row">
+    <div class="col-md-6" style="display: grid;">
+      <button onclick="loadImg('08')" type="button" class="btn p-0"
+        data-bs-toggle="modal" data-bs-target="#img-modal"
+        style="align-items: center;"><img src="{% static 'img/08.jpg' %}"
+          alt="Ladefehler" class style="height: 500px;" /></button>
+    </div>
+    <div class="col-md-6" style="display: grid;">
+      <button onclick="loadImg('09')" type="button" class="btn p-0"
+        data-bs-toggle="modal" data-bs-target="#img-modal"
+        style="align-items: center;"><img src="{% static 'img/09.jpg' %}"
+          alt="Ladefehler" class=" " style="height: 500px;" /></button>
+    </div>
+  </div>
+  <br>
+  <h3>🪖 Ausrüstung</h3>
+  <p><strong>Um bei uns mitzuspielen, benötigst du folgende
+      Grundausstattung:</strong></p>
+  <ul>
+    <li><strong>Schutzbrille</strong>: Pflicht! Deine Augen müssen stets
+      geschützt sein.</li>
+    <li><strong>Airsoftwaffe</strong> (Markierer): Egal ob Federdruck, Gas oder
+      elektrisch – Hauptsache, sie entspricht den gesetzlichen Vorgaben.</li>
+    <li><strong>Bio-BBs</strong>: Nur biologisch abbaubare BBs bis 0,36 g sind
+      auf unserem Spielfeld erlaubt.</li>
+    <li><strong>Robuste Kleidung</strong>: Lange Hose und langärmliges Oberteil
+      schützen vor Kratzern und Treffern.</li>
+    <li><strong>Festes Schuhwerk</strong>: Stabile Schuhe mit gutem Halt sind
+      wichtig für deine Sicherheit.</li>
+  </ul>
+  <p><strong>Optional, aber empfehlenswert:</strong></p>
+  <ul>
+    <li> Handschuhe: Schützen deine Hände und verbessern den Grip.</li>
+    <li> Gesichtsschutz: Ein Mesh-Mask oder ein Schal kann dein Gesicht vor
+      Treffern bewahren.</li>
+    <li> Kopfbedeckung: Ein Helm oder eine Mütze bietet zusätzlichen
+      Schutz.</li>
+    <li> Taktische Weste oder Chest Rig: Hilft beim Transport von Magazinen und
+      Ausrüstung.</li>
+  </ul>
+  <p><strong>Hinweis für Anfänger:</strong><br>
+    Wenn du neu im Airsoft bist und noch keine eigene Ausrüstung besitzt, sprich
+    uns gerne an. Wir können dir Tipps geben oder dir für den Anfang Ausrüstung
+    leihen.</p>
+
+  <br>
+  <h3>🕘 Wie läuft ein normaler Spieltag bei uns ab?</h3>
+  <ul>
+    <li> Ab 9:00 Uhr → Anreise und Anmeldung</li>
+    <li> Ausgabe der Leihausrüstung (bei Bedarf, mit vorheriger Anmeldung –
+      gegen Hinterlegung eines Ausweisdokuments)</li>
+    <li> Aufrödeln der Waffen & Chronen</li>
+    <li> 10:00 Uhr → Spielstart (mit Spielregelerklärung & Teamaufteilung)</li>
+    <li> 13:00 Uhr → Gemeinsame Mittagspause</li>
+    <li> 14:00 Uhr → Weitere Spielrunden</li>
+    <li> 17:00 Uhr → Spielende (gern auch mit kleiner Verlängerung 😉)</li>
+  </ul>
+  <p><i>Hinweis: Die angegebenen Zeiten sind Richtwerte und können sich je nach
+      Situation etwas verschieben.</i></p>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="img-modal" tabindex="-1"
+  aria-labelledby="imgmodalLabel" aria-hidden="true" style="width: 100%;">
+  <div class="modal-dialog modal-xl modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-body" id="img-modal">
+        <img class="w-100" src="#" alt="Ladefehler" />
       </div>
     </div>
-
-    <br>
-    <h3>Wie läuft ein normaler Spieltag bei uns ab?</h3>
-    <ul>
-      <li>Ab 9:00 Uhr Anreise</li>
-      <li>Anmeldung</li>
-      <li>Ausgabe der Leihausrüstung (bei Bedarf mit vorheriger Anmeldung: Ausgabe der Leihausrüstung gegen hinterlegung eines Ausweisdokumentes)</li>
-      <li>Aufrödeln der Waffen und Cronen</li>
-      <li>10 Uhr Spielstart (Erklärung der Spielregeln, Teamaufteilung)</li>
-      <li>13 Uhr gemeinsame Mittagspause</li>
-      <li>14 Uhr Weitere Spielrunden</li>
-      <li>17 Uhr Spielende (gerne auch mit kleiner Verlängerung)</li>
-      <li>die angegebenen Zeiten sind Richtwerte und können Sich Situationsbedingt ändern.</li>
-    </ul>
   </div>
-
-
-  <!-- Modal -->
-  <div class="modal fade" id="img-modal" tabindex="-1" aria-labelledby="imgmodalLabel" aria-hidden="true" style="width: 100%;">
-    <div class="modal-dialog modal-xl modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-body" id="img-modal">
-          <img class="w-100" src="#" alt="Ladefehler" />
-        </div>
-      </div>
-    </div>
-  </div>
+</div>
 {% endblock %}
