--- a/Website/Site/templates/downloads.html
+++ b/Website/Site/templates/downloads.html
@@ -2,97 +2,124 @@
 {% load static %}
 
 {% block content %}
-  <div class="c-downloads">
-    <h2>Downloads</h2> <br />
-    <table class="table table-hover" style="border-color: var(--bs-secondary-color);">
-      <tr>
-        <th>
-          <h3>File</h3>
-        </th>
-        <th class="text-end">
-          <h3>Download</h3>
-        </th>
-      </tr>
-      <tr>
-        <td>ASJ Kurzvorstellung</td>
-        <td class="text-end">
-          <a href="{% static './Download/_ASJ-Kurzvorstellung.pdf' %}" download class="btn btn-secondary">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
-              <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
-            </svg>
-          </a>
-        </td>
-      </tr>
-      <tr>
-        <td>Datenschutzerklärung</td>
-        <td class="text-end">
-          <a href="{% static './Download/ASJ-Datenschutzerklärung-v01.3.pdf' %}" download class="btn btn-secondary">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
-              <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
-            </svg>
-          </a>
-        </td>
-      </tr>
-      <tr>
-        <td>Einverständnisserklärung U18</td>
-        <td class="text-end">
-          <a href="{% static './Download/ASJ-Einverständnisserklärung_u18-v01.0.pdf' %}" download class="btn btn-secondary">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
-              <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
-            </svg>
-          </a>
-        </td>
-      </tr>
-      <tr>
-        <td>Fotoerlaubnis</td>
-        <td class="text-end">
-          <a href="{% static './Download/ASJ-Fotoerlaubnis-v02.0.pdf' %}" download class="btn btn-secondary">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
-              <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
-            </svg>
-          </a>
-        </td>
-      </tr>
-      <tr>
-        <td>Hausregeln</td>
-        <td class="text-end">
-          <a href="{% static './Download/ASJ-Hausregeln-v01.1.pdf' %}" download class="btn btn-secondary">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
-              <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
-            </svg>
-          </a>
-        </td>
-      </tr>
-      <tr>
-        <td>Verzichtserklärung</td>
-        <td class="text-end">
-          <a href="{% static './Download/ASJ-Verzichtserklärung-v01.0.pdf' %}" download class="btn btn-secondary">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
-              <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
-            </svg>
-          </a>
-        </td>
-      </tr>
-    </table><br />
+<div class="c-downloads">
+  <h2>Downloads</h2> <br />
+  <table class="table table-hover"
+    style="border-color: var(--bs-secondary-color);">
+    <tr>
+      <th>
+        <h3>Datei</h3>
+      </th>
+      <th class="text-end">
+        <h3>Download</h3>
+      </th>
+    </tr>
+    <tr>
+      <td>ASJ Kurzvorstellung</td>
+      <td class="text-end">
+        <a href="{% static './Download/_ASJ-Kurzvorstellung.pdf' %}" download
+          class="btn btn-secondary">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px"
+            viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
+            <path
+              d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
+          </svg>
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>Datenschutzerklärung</td>
+      <td class="text-end">
+        <a href="{% static './Download/ASJ-Datenschutzerklärung-v01.3.pdf' %}"
+          download class="btn btn-secondary">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px"
+            viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
+            <path
+              d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
+          </svg>
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>Einverständnisserklärung U18</td>
+      <td class="text-end">
+        <a
+          href="{% static './Download/ASJ-Einverständnisserklärung_u18-v01.0.pdf' %}"
+          download class="btn btn-secondary">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px"
+            viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
+            <path
+              d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
+          </svg>
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>Fotoerlaubnis</td>
+      <td class="text-end">
+        <a href="{% static './Download/ASJ-Fotoerlaubnis-v02.0.pdf' %}" download
+          class="btn btn-secondary">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px"
+            viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
+            <path
+              d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
+          </svg>
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>Hausregeln</td>
+      <td class="text-end">
+        <a href="{% static './Download/ASJ-Hausregeln-v01.1.pdf' %}" download
+          class="btn btn-secondary">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px"
+            viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
+            <path
+              d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
+          </svg>
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>Verzichtserklärung</td>
+      <td class="text-end">
+        <a href="{% static './Download/ASJ-Verzichtserklärung-v01.0.pdf' %}"
+          download class="btn btn-secondary">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px"
+            viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
+            <path
+              d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
+          </svg>
+        </a>
+      </td>
+    </tr>
+  </table><br />
 
-    <h3>Read Me</h3>
+  <h3>Bevor du loslegst...</h3>
+  <p>An unseren Offenen Spieltagen liegen Unterschriftenlisten aus – ein
+    Ausdruck der Unterlagen ist nicht zwingend notwendig. Die Bereitstellung
+    hier dient lediglich zur Information vorab.</p>
+  <p><strong>Ausnahme:</strong><br>
+    Die Einverständniserklärung U18 ("Muttizettel") bitte zu Hause ausdrucken,
+    ausfüllen und mitbringen!</p>
+  <p>Mit deiner Unterschrift vor Ort bestätigst du, dass du das aktuelle
+    Regelwerk kennst und akzeptierst!</p>
+</div>
 
-    <p>An unseren "Offenen Spieltagen" gibt es Unterschriftenlisten, ein Ausdruck der hier bereitgestellten Unterlagen ist somit nicht zwingend notwendig. Die Bereitstellung dient zur Information vorab.</p>
-    <p>>>> Ausnahme: Unsere Einverständniserklärung U18 (der sog. "Muttizettel") - diese bitte zu Hause ausdrucken, ausfüllen und zum Spieltag mitbringen!!!</p>
-    <p>Mit deiner Unterschrift an unseren Spieltagen, verpflichtest du dich, die jeweils aktuellen Stände unseres Regelwerkes zu kennen...</p>
-  </div>
+<br>
+<button onclick="loadImg('02')" type="button" class="btn" data-bs-toggle="modal"
+  data-bs-target="#img-modal"><img src="{% static 'img/02.jpg' %}"
+    alt="Ladefehler" class="w-75" /></button><br /><br />
 
-  <br>
-  <button onclick="loadImg('02')" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#img-modal"><img src="{% static 'img/02.jpg' %}" alt="Ladefehler" class="w-75" /></button><br /><br />
-
-  <!-- Modal -->
-  <div class="modal fade" id="img-modal" tabindex="-1" aria-labelledby="imgmodalLabel" aria-hidden="true" style="width: 100%;">
-    <div class="modal-dialog modal-xl modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-body" id="img-modal">
-          <img class="w-100" src="#" alt="Ladefehler" />
-        </div>
+<!-- Modal -->
+<div class="modal fade" id="img-modal" tabindex="-1"
+  aria-labelledby="imgmodalLabel" aria-hidden="true" style="width: 100%;">
+  <div class="modal-dialog modal-xl modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-body" id="img-modal">
+        <img class="w-100" src="#" alt="Ladefehler" />
       </div>
     </div>
   </div>
+</div>
 {% endblock %}
