--- a/Website/Site/templates/map.html
+++ b/Website/Site/templates/map.html
@@ -21,35 +21,66 @@
   </ul>
   <p>Einem spielreichen Wochenende steht damit nichts mehr im Weg!</p>
   <br />
+
   <h3>2019</h3><br />
-  <button onclick="loadImg('03')" type="button" class="btn"
-    data-bs-toggle="modal" data-bs-target="#img-modal"><img
-      src="{% static 'img/03.jpg' %}" alt="Ladefehler"
-      class="c-btn-img" /></button><br /><br />
+  <div style="display: flex; width: 100%; justify-content: center;">
+    <button onclick="loadImg('03')" type="button" class="btn"
+      data-bs-toggle="modal" data-bs-target="#img-modal">
+      <img
+        src="{% static 'img/03.jpg' %}" alt="Ladefehler"
+        class="c-btn-img" />
+    </button>
+  </div>  
+
+  <br /><br />
+
   <h3>Heute</h3><br />
-  <button onclick="loadImg('07')" type="button" class="btn"
-    data-bs-toggle="modal" data-bs-target="#img-modal"><img
+  <div style="display: flex; width: 100%; justify-content: center;">
+    <button onclick="loadImg('07')" type="button" class="btn"
+    data-bs-toggle="modal" data-bs-target="#img-modal">
+    <img
       src="{% static 'img/07.jpg' %}" alt="Ladefehler"
-      class="c-btn-img" /></button><br /><br />
+      class="c-btn-img" />
+    </button>
+  </div>
+
+  <br /><br />
+
   <h3>Szenario:</h3><br />
   <button onclick="loadImg('06')" type="button" class="btn"
-    data-bs-toggle="modal" data-bs-target="#img-modal"><img
+    data-bs-toggle="modal" data-bs-target="#img-modal">
+    <img
       src="{% static 'img/06.jpg' %}" alt="Ladefehler"
-      class="c-btn-img" /></button><br /><br />
-      <p>Ein kleiner Konvoi unmarkierter Fahrzeuge ist mitten in einem abgelegenen Kaff liegen geblieben...</p>
-      <h3>Geländetyp:</h3>
-      Urban / CQB<br>
-      <em>(CQB = Close Quarter Battle – Nahkampf auf engem Raum, z. B. in Gebäuden oder zwischen Barrikaden)</em><br><br>
-      <h3>Spielmodi:</h3>
-      <ul>
-        <li><strong>Team-Deathmatch</strong><br>Zwei Teams treten gegeneinander an – Ziel: so viele Gegner wie möglich ausschalten.</li>
-        <li><strong>Konvoi</strong><br>Ein Team schützt einen verunfallten „Konvoi“ auf dem Spielfeld, das andere versucht, sie dabei zu stören.</li>
-        <li><strong>Geisel retten</strong><br>Ein Team hält eine Geisel gefangen, das andere muss sie retten und in Sicherheit bringen.</li>
-        <li><strong>Capture the Flag</strong><br>Ziel ist es, die gegnerische Flagge zu stehlen und zur eigenen Basis zu bringen – ohne selbst geschnappt zu werden.</li>
-        <li><strong>Bombe</strong><br>Ein Team muss ein Zielobjekt „zerstören“, das andere versucht, es zu verteidigen.</li>
-        <li><strong>Domination</strong><br>Kontrollpunkte auf dem Feld müssen eingenommen und möglichst lange gehalten werden – je länger, desto mehr Punkte.</li>
-      </ul>
-      <p>Wir haben auch noch andere, speziellere Spielmodi und sind jederzeit für weitere Vorschläge offen!</p>
+      class="c-btn-img" />
+  </button>
+
+  <br /><br />
+
+  <p>Ein kleiner Konvoi unmarkierter Fahrzeuge ist mitten in einem abgelegenen
+    Kaff liegen geblieben...</p>
+  <h3>Geländetyp:</h3>
+  Urban / CQB<br>
+  <em>(CQB = Close Quarter Battle – Nahkampf auf engem Raum, z. B. in Gebäuden
+    oder zwischen Barrikaden)</em><br><br>
+  <h3>Spielmodi:</h3>
+  <ul>
+    <li><strong>Team-Deathmatch</strong><br>Zwei Teams treten gegeneinander an –
+      Ziel: so viele Gegner wie möglich ausschalten.</li>
+    <li><strong>Konvoi</strong><br>Ein Team schützt einen verunfallten „Konvoi“
+      auf dem Spielfeld, das andere versucht, sie dabei zu stören.</li>
+    <li><strong>Geisel retten</strong><br>Ein Team hält eine Geisel gefangen,
+      das andere muss sie retten und in Sicherheit bringen.</li>
+    <li><strong>Capture the Flag</strong><br>Ziel ist es, die gegnerische Flagge
+      zu stehlen und zur eigenen Basis zu bringen – ohne selbst geschnappt zu
+      werden.</li>
+    <li><strong>Bombe</strong><br>Ein Team muss ein Zielobjekt „zerstören“, das
+      andere versucht, es zu verteidigen.</li>
+    <li><strong>Domination</strong><br>Kontrollpunkte auf dem Feld müssen
+      eingenommen und möglichst lange gehalten werden – je länger, desto mehr
+      Punkte.</li>
+  </ul>
+  <p>Wir haben auch noch andere, speziellere Spielmodi und sind jederzeit für
+    weitere Vorschläge offen!</p>
   <dl>
     <dt>
       <h3>Wegbeschreibung:</h3>
