--- a/Website/Site/templates/kalender.html
+++ b/Website/Site/templates/kalender.html
@@ -11,7 +11,7 @@
       <p style="font-weight: bold;">Um diese Inhalte zu Laden müssen die Verwendeten Cookies akzeptiert werden.</p>
     </div>
     <div class="layer2" style="margin-left: -100%;">
-      <iframe data-src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FBoa_Vista&showPrint=0&showTz=0&showTabs=0&showCalendars=0&showTitle=0&src=c2NvcnBpb25zamVuYUBnbWFpbC5jb20&color=%23039BE5" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no" data-cookiescript="accepted"></iframe>
+      <iframe data-src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Europe%2FBerlin&showPrint=0&showTabs=0&showCalendars=0&showTz=0&mode=AGENDA&showTitle=0&src=c2NvcnBpb25zamVuYUBnbWFpbC5jb20&color=%23039BE5" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no" data-cookiescript="accepted"></iframe>
     </div>
   </div>
   <div>
