--- a/Website/Site/templates/layout.html
+++ b/Website/Site/templates/layout.html
@@ -159,10 +159,11 @@
         <h2 class="accordion-header"><button class="accordion-button collapsed" style="color: var(--bs-light); background-color: var(--bs-primary);" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne"><h3 style="color: var(--bs-light);" class="w-100 text-center c-impressum">Impressum</h3></button></h2>
         <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
           <div class="accordion-body w-100 bg-secondary">
-            <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/impressum/#vorstand-anchor">Vorstand und Register</a></button>
-            <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/impressum/#inhalt-anchor">Haftung</a></button>
-            <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/impressum/#links-anchor">Urheberrecht</a></button>
-            <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/impressum/ur-anchor">Datenschutz</a></button>
+            <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/impressum/#vorstand-anchor">Vorstand und Registereintrag</a></button>
+            <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/impressum/#inhalt-anchor">Haftungsausschluss für Inhalt</a></button>
+            <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/impressum/#links-anchor">Haddftungsausschluss für Links</a></button>
+            <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/impressum/#ur-anchor">Urheberrecht</a></button>
+            <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/impressum/#ds-anchor">Datenschutz</a></button>
             <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/kontakt">Kontakt</a></button>
 
             <div class="row">
