--- a/Website/Site/templates/interessiert.html
+++ b/Website/Site/templates/interessiert.html
@@ -10,8 +10,7 @@
 <p>Wenn du etwas davon brauchst, bitte <strong>bei der Anmeldung reservieren</strong> – eine kurze Nachricht über einen unserer Kanäle genügt.</p>
 <br>
 <h3>Du willst Teil des Teams werden?</h3>
-<p>Du willst zum Team der Scorpions gehören?<br>
-Mega – wir freuen uns auf dich!</p>
+<p>Mega – wir freuen uns auf dich!</p>
 <p>Lade dir einfach unseren Mitgliedsantrag herunter, fülle ihn vollständig aus und:</p>
 <ul>
   <li>schick ihn uns per E-Mail</li>
