--- a/Website/Site/templates/map.html
+++ b/Website/Site/templates/map.html
@@ -57,7 +57,7 @@
   <br /><br />
 
   <p>Ein kleiner Konvoi unmarkierter Fahrzeuge ist mitten in einem abgelegenen
-    Kaff liegen geblieben...</p>
+    Kaff liegen geblieben...</p><br> <br>
   <h3>Geländetyp:</h3>
   Urban / CQB<br>
   <em>(CQB = Close Quarter Battle – Nahkampf auf engem Raum, z. B. in Gebäuden
