--- a/Website/Site/templates/map.html
+++ b/Website/Site/templates/map.html
@@ -61,7 +61,7 @@
   <h3>Geländetyp:</h3>
   Urban / CQB<br>
   <em>(CQB = Close Quarter Battle – Nahkampf auf engem Raum, z. B. in Gebäuden
-    oder zwischen Barrikaden)</em><br><br>
+    oder zwischen Barrikaden)</em><br>
   <h3>Spielmodi:</h3>
   <ul>
     <li><strong>Team-Deathmatch</strong><br>Zwei Teams treten gegeneinander an –
