--- a/Website/Site/templates/map.html
+++ b/Website/Site/templates/map.html
@@ -57,11 +57,11 @@
   <br /><br />
 
   <p>Ein kleiner Konvoi unmarkierter Fahrzeuge ist mitten in einem abgelegenen
-    Kaff liegen geblieben...</p><br> <br>
+    Kaff liegen geblieben...</p><br>
   <h3>Geländetyp:</h3>
   Urban / CQB<br>
   <em>(CQB = Close Quarter Battle – Nahkampf auf engem Raum, z. B. in Gebäuden
-    oder zwischen Barrikaden)</em><br>
+    oder zwischen Barrikaden)</em><br><br>
   <h3>Spielmodi:</h3>
   <ul>
     <li><strong>Team-Deathmatch</strong><br>Zwei Teams treten gegeneinander an –
