--- a/Website/Site/templates/downloads.html
+++ b/Website/Site/templates/downloads.html
@@ -14,22 +14,9 @@
       </th>
     </tr>
     <tr>
-      <td>ASJ Kurzvorstellung</td>
-      <td class="text-end">
-        <a href="{% static './Download/_ASJ-Kurzvorstellung.pdf' %}" download
-          class="btn btn-secondary">
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px"
-            viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
-            <path
-              d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
-          </svg>
-        </a>
-      </td>
-    </tr>
-    <tr>
       <td>Datenschutzerklärung</td>
       <td class="text-end">
-        <a href="{% static './Download/ASJ-Datenschutzerklärung-v01.3.pdf' %}"
+        <a href="{% static './Download/ASJ Datenschutzerklärung.pdf' %}"
           download class="btn btn-secondary">
           <svg xmlns="http://www.w3.org/2000/svg" height="24px"
             viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
@@ -43,7 +30,7 @@
       <td>Einverständnisserklärung U18</td>
       <td class="text-end">
         <a
-          href="{% static './Download/ASJ-Einverständnisserklärung_u18-v01.0.pdf' %}"
+          href="{% static './Download/ASJ Einverständniserklärung der Erziehungsberechtigten für Spieler unter 18 Jahre.pdf' %}"
           download class="btn btn-secondary">
           <svg xmlns="http://www.w3.org/2000/svg" height="24px"
             viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
@@ -56,7 +43,7 @@
     <tr>
       <td>Fotoerlaubnis</td>
       <td class="text-end">
-        <a href="{% static './Download/ASJ-Fotoerlaubnis-v02.0.pdf' %}" download
+        <a href="{% static './Download/ASJ Fotoerlaubnis.pdf' %}" download
           class="btn btn-secondary">
           <svg xmlns="http://www.w3.org/2000/svg" height="24px"
             viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
@@ -69,7 +56,21 @@
     <tr>
       <td>Hausregeln</td>
       <td class="text-end">
-        <a href="{% static './Download/ASJ-Hausregeln-v01.1.pdf' %}" download
+        <a href="{% static './Download/ASJ Haus- und Spielregeln.pdf' %}"
+          download
+          class="btn btn-secondary">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px"
+            viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
+            <path
+              d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
+          </svg>
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>Preisliste</td>
+      <td class="text-end">
+        <a href="{% static './Download/ASJ Preisliste.pdf' %}" download
           class="btn btn-secondary">
           <svg xmlns="http://www.w3.org/2000/svg" height="24px"
             viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
@@ -82,8 +83,51 @@
     <tr>
       <td>Verzichtserklärung</td>
       <td class="text-end">
-        <a href="{% static './Download/ASJ-Verzichtserklärung-v01.0.pdf' %}"
+        <a href="{% static './Download/ASJ Verzichtserklärung _ Haftungsauschluss.pdf' %}"
           download class="btn btn-secondary">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px"
+            viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
+            <path
+              d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
+          </svg>
+        </a>
+      </td>
+    </tr>
+    <tr>
+        <td>Beitragsordnung</td>
+        <td class="text-end">
+          <a href="{% static 'Download/Interessiert/ASJ Beitragsordnung.pdf' %}" download class="btn btn-secondary">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
+              <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
+            </svg>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>Vereinssatzung</td>
+        <td class="text-end">
+          <a href="{% static 'Download/Interessiert/ASJ Satzung 01.03.2025.pdf' %}" download class="btn btn-secondary">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
+              <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
+            </svg>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>Mitgliedsantrag</td>
+        <td class="text-end">
+          <a href="{% static 'Download/Interessiert/ASJ Mitgliedsantrag.pdf' %}" download class="btn btn-secondary">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
+              <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
+            </svg>
+          </a>
+        </td>
+      </tr>
+    <tr>
+      <td>ASJ Kurzvorstellung</td>
+      <td class="text-end">
+        <a href="{% static './Download/ASJ Kurzvorstellung.pdf' %}" download
+          class="btn btn-secondary">
           <svg xmlns="http://www.w3.org/2000/svg" height="24px"
             viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
             <path
