--- a/Website/Site/templates/interessiert.html
+++ b/Website/Site/templates/interessiert.html
@@ -28,7 +28,7 @@
       <tr>
         <td>Beitragsordnung</td>
         <td class="text-end">
-          <a href="{% static 'Download/Mitglied werden/ASJ-Beitragsordnung-v01.1.pdf' %}" download class="btn btn-secondary">
+          <a href="{% static 'Download/Interessiert/ASJ Beitragsordnung.pdf' %}" download class="btn btn-secondary">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
               <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
             </svg>
@@ -38,7 +38,7 @@
       <tr>
         <td>Vereinssatzung</td>
         <td class="text-end">
-          <a href="{% static 'Download/Mitglied werden/ASJ-Vereinssatzung-v01.1.pdf' %}" download class="btn btn-secondary">
+          <a href="{% static 'Download/Interessiert/ASJ Satzung 01.03.2025.pdf' %}" download class="btn btn-secondary">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
               <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
             </svg>
@@ -48,7 +48,7 @@
       <tr>
         <td>Mitgliedsantrag</td>
         <td class="text-end">
-          <a href="{% static 'Download/Mitglied werden/ASJ-Mitgliedsantrag-v01.1.pdf' %}" download class="btn btn-secondary">
+          <a href="{% static 'Download/Interessiert/ASJ Mitgliedsantrag.pdf' %}" download class="btn btn-secondary">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
               <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
             </svg>
@@ -58,7 +58,7 @@
       <tr>
         <td>Alles Herunterladen</td>
         <td class="text-end">
-          <a href="{% static 'Download/Mitglied werden.zip' %}" download class="btn btn-secondary">
+          <a href="{% static 'Download/Interessiert.zip' %}" download class="btn btn-secondary">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
               <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
             </svg>
