Rechtschreibung berichtigt in 'layout.html'

--- a/Website/Site/templates/layout.html
+++ b/Website/Site/templates/layout.html
@@ -161,7 +161,7 @@
           <div class="accordion-body w-100 bg-secondary">
             <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/impressum/#vorstand-anchor">Vorstand und Registereintrag</a></button>
             <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/impressum/#inhalt-anchor">Haftungsausschluss für Inhalt</a></button>
-            <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/impressum/#links-anchor">Haddftungsausschluss für Links</a></button>
+            <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/impressum/#links-anchor">Haftungsausschluss für Links</a></button>
             <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/impressum/#ur-anchor">Urheberrecht</a></button>
             <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/impressum/#ds-anchor">Datenschutz</a></button>
             <button class="btn btn-secondary w-100"><a class="nav-link fs-5 px-3 light" aria-current="page" href="/kontakt">Kontakt</a></button>
