--- a/Website/Site/templates/downloads.html
+++ b/Website/Site/templates/downloads.html
@@ -16,7 +16,7 @@
     <tr>
       <td>Datenschutzerklärung</td>
       <td class="text-end">
-        <a href="{% static './Download/ASJ Datenschutzerklärung.pdf' %}"
+        <a href="https://drive.google.com/uc?export=download&id=1gWcYgsVFGBOKaCiADLzcthoA7birjEiS"
           download class="btn btn-secondary">
           <svg xmlns="http://www.w3.org/2000/svg" height="24px"
             viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
@@ -30,7 +30,7 @@
       <td>Einverständnisserklärung U18</td>
       <td class="text-end">
         <a
-          href="{% static './Download/ASJ Einverständniserklärung der Erziehungsberechtigten für Spieler unter 18 Jahre.pdf' %}"
+          href="https://drive.google.com/uc?export=download&id=19nYYbxFlMZTLmmz6Vzx60fX7FfWA9rJy"
           download class="btn btn-secondary">
           <svg xmlns="http://www.w3.org/2000/svg" height="24px"
             viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
@@ -43,7 +43,7 @@
     <tr>
       <td>Fotoerlaubnis</td>
       <td class="text-end">
-        <a href="{% static './Download/ASJ Fotoerlaubnis.pdf' %}" download
+        <a href="https://drive.google.com/uc?export=download&id=1qWWdP1LwpCOpJ-nbQqJWJX0JDwISvu-8" download
           class="btn btn-secondary">
           <svg xmlns="http://www.w3.org/2000/svg" height="24px"
             viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
@@ -54,9 +54,9 @@
       </td>
     </tr>
     <tr>
-      <td>Hausregeln</td>
+      <td>Haus- & Spielregeln</td>
       <td class="text-end">
-        <a href="{% static './Download/ASJ Haus- und Spielregeln.pdf' %}"
+        <a href="https://drive.google.com/uc?export=download&id=1F3jWZwBcgPVrfcnUSAm9N_wnDUSVn_mr"
           download
           class="btn btn-secondary">
           <svg xmlns="http://www.w3.org/2000/svg" height="24px"
@@ -70,7 +70,7 @@
     <tr>
       <td>Preisliste</td>
       <td class="text-end">
-        <a href="{% static './Download/ASJ Preisliste.pdf' %}" download
+        <a href="https://drive.google.com/uc?export=download&id=12-6-cQsJm-zwOxpIR9lfmXJXIOx0Kx8R" download
           class="btn btn-secondary">
           <svg xmlns="http://www.w3.org/2000/svg" height="24px"
             viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
@@ -83,7 +83,7 @@
     <tr>
       <td>Verzichtserklärung</td>
       <td class="text-end">
-        <a href="{% static './Download/ASJ Verzichtserklärung _ Haftungsauschluss.pdf' %}"
+        <a href="https://drive.google.com/uc?export=download&id=1ZzWHv17wUiA35DHieIuMSxGBFfZHgGEL"
           download class="btn btn-secondary">
           <svg xmlns="http://www.w3.org/2000/svg" height="24px"
             viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
@@ -96,7 +96,7 @@
     <tr>
         <td>Beitragsordnung</td>
         <td class="text-end">
-          <a href="{% static 'Download/Interessiert/ASJ Beitragsordnung.pdf' %}" download class="btn btn-secondary">
+          <a href="https://drive.google.com/uc?export=download&id=1K4DSgQtMimtviYqjuu_SyKxJWD8XA9Dm" download class="btn btn-secondary">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
               <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
             </svg>
@@ -106,7 +106,7 @@
       <tr>
         <td>Vereinssatzung</td>
         <td class="text-end">
-          <a href="{% static 'Download/Interessiert/ASJ Satzung 01.03.2025.pdf' %}" download class="btn btn-secondary">
+          <a href="https://drive.google.com/uc?export=download&id=1ZzWHv17wUiA35DHieIuMSxGBFfZHgGEL" download class="btn btn-secondary">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
               <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
             </svg>
@@ -116,26 +116,13 @@
       <tr>
         <td>Mitgliedsantrag</td>
         <td class="text-end">
-          <a href="{% static 'Download/Interessiert/ASJ Mitgliedsantrag.pdf' %}" download class="btn btn-secondary">
+          <a href="https://drive.google.com/uc?export=download&id=1sO4JpoVpop87E6t-16GZKtjXPT15CAtl" download class="btn btn-secondary">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
               <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
             </svg>
           </a>
         </td>
       </tr>
-    <tr>
-      <td>ASJ Kurzvorstellung</td>
-      <td class="text-end">
-        <a href="{% static './Download/ASJ Kurzvorstellung.pdf' %}" download
-          class="btn btn-secondary">
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px"
-            viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
-            <path
-              d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
-          </svg>
-        </a>
-      </td>
-    </tr>
   </table><br />
 
   <h3>Bevor du loslegst...</h3>
