--- a/Website/Site/templates/downloads.html
+++ b/Website/Site/templates/downloads.html
@@ -123,6 +123,16 @@
           </a>
         </td>
       </tr>
+      <tr>
+        <td>Antrag auf Fahrtkostenzuschuss</td>
+        <td class="text-end">
+          <a href="https://drive.google.com/uc?export=download&id=19nYYbxFlMZTLmmz6Vzx60fX7FfWA9rJy" download class="btn btn-secondary">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--bs-light)">
+              <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
+            </svg>
+          </a>
+        </td>
+      </tr>
   </table><br />
 
   <h3>Bevor du loslegst...</h3>
